# llm-zoomcamp-2026-evals

./: 01-data-gen.ipynb  02-search-eval.ipynb  03-rag-eval.ipynb  2-search-eval.ipynb  evaluation_utils.py  pyproject.toml  rag_helper.py
data/: ground_truth-new.csv
